@@ -1,0 +1,21 @@
+INCLUDES = -I$(top_srcdir)/src
+METASOURCES = AUTO
+
+
+
+ceguifontsdir = $(datadir)/games/ember/media/gui/cegui/datafiles/fonts
+ceguiimagesetsdir = $(datadir)/games/ember/media/gui/cegui/datafiles/imagesets
+ceguilayoutsdir = $(datadir)/games/ember/media/gui/cegui/datafiles/layouts
+ceguischemesdir = $(datadir)/games/ember/media/gui/cegui/datafiles/schemes
+ceguiconfigdir = $(datadir)/games/ember/media/gui/cegui/datafiles/configs
+ceguilooknfeeldir = $(datadir)/games/ember/media/gui/cegui/datafiles/looknfeel
+ceguischemadir = $(datadir)/games/ember/media/gui
+
+
+dist_ceguifonts_DATA = datafiles/fonts/Font.xsd datafiles/fonts/tahoma-14.xml datafiles/fonts/tahoma-10.xml datafiles/fonts/tahoma-8.xml datafiles/fonts/tahoma.ttf datafiles/fonts/vera-sans-14.xml datafiles/fonts/vera-sans-10.xml datafiles/fonts/vera-sans-8.xml datafiles/fonts/Vera.ttf
+dist_ceguiimagesets_DATA = datafiles/imagesets/Imageset.xsd datafiles/imagesets/TaharezLook.imageset datafiles/imagesets/WindowsLook.imageset datafiles/imagesets/iconset_standard.imageset datafiles/imagesets/iconset_mason.imageset datafiles/imagesets/EmberLook.imageset
+dist_ceguilayouts_DATA = datafiles/layouts/GUILayout.xsd
+dist_ceguischemes_DATA = datafiles/schemes/TaharezLook.scheme datafiles/schemes/TaharezLookWidgetAliases.scheme datafiles/schemes/TaharezLookSkin.scheme datafiles/schemes/WindowsLook.scheme datafiles/schemes/WindowsLookSkin.scheme datafiles/schemes/GUIScheme.xsd datafiles/schemes/EmberLookSkin.scheme
+dist_ceguiconfig_DATA = datafiles/configs/cegui.config
+dist_ceguilooknfeel_DATA = datafiles/looknfeel/TaharezLook.looknfeel datafiles/looknfeel/Vanilla.looknfeel datafiles/looknfeel/WindowsLook.looknfeel datafiles/looknfeel/EmberLook.looknfeel
+dist_ceguischema_DATA = datafiles/layouts/GUILayout.xsd datafiles/imagesets/Imageset.xsd datafiles/fonts/Font.xsd datafiles/schemes/GUIScheme.xsd datafiles/configs/CEGUIConfig.xsd
